--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <div class="card bg-black text-white border-0 h-100 shadow">
                         <img src="fc.jpg" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">#1 - FORZA VI</h5>
+                            <h5 class="card-title">#1 - GTA VI</h5>
                             <p class="card-text">El regresa mas esperado. Mundo abierto, narrativa inmersiva y
                                 multijugador masivo</p>
                             <div class="progress mb-2">
